cards overlapse bug fixed

--- a/styles/landingPage.css
+++ b/styles/landingPage.css
@@ -81,7 +81,7 @@
     background: rgb(3, 6, 66);
     box-shadow: 1px 1px 2px #000000;
     outline: #22A39F 2px solid;
-    transform: scale(115%);
+    transform: scale(110%);
 }
 
 
